partial/force-app/main/default/objects/Ownership__c/Ownership__c.object-meta.xml
<CustomObject>
    <label>Ownership</label>
    <nameField>
        <label>Ownership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>