partial/force-app/main/default/objects/Ownership__c/fields/Vendor_Reapit_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Reapit_Id__c</fullName>
    <externalId>true</externalId>
    <label>Vendor Reapit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>