partial/force-app/main/default/objects/Ownership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>IsPrimary__c</columns>
    <columns>Vendor_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>